Glossary map: entity registration, target, route rewrite; LORE/DATA/README updates; remove game_data MVP JSON

--- a/LORE/glossary/map/Встреча_на_карте.md
+++ b/LORE/glossary/map/Встреча_на_карте.md
@@ -1,28 +1,91 @@
-Status: DRAFT
-ID: map_encounter
+Status: DRAFT  
+ID: map_encounter  
 
 # Встреча на карте
 
 ## Кратко
-Встреча на карте — это событие, возникающее при сближении сущностей или при достижении точки интереса на карте мира.
+Встреча на карте — это событие, фиксируемое картой мира, возникающее при достижении условий пространственного контакта между сущностями (или сущностью и объектом взаимодействия), и приводящее к изменению пространственных статусов и/или запуску внешнего процесса (например, боя).
 
-## Расширенно
-Встреча на карте описывает факт возникновения взаимодействия между сущностями в пространстве карты мира.
-Встреча может происходить между отрядами, между отрядом и точкой интереса, либо иными сущностями карты.
+Встреча является результатом пространственной логики карты и не является стратегическим решением контролёров.
 
-Встреча фиксирует момент и контекст сближения, но не определяет форму дальнейшего взаимодействия.
-Последующие действия (бой, диалог, торговля, игнорирование и т.д.) не входят в данное определение и описываются отдельными системами.
+---
 
-Встреча на карте применяется исключительно к карте мира и не используется в тактическом бою или внутренних локациях.
+## Инварианты
 
-## Где используется
-- Переход от движения к взаимодействию
-- Инициация боёв, событий или сценариев
-- Реакции акторов на присутствие других сущностей
-- Вход в локации и точки интереса
+### 1. Встреча фиксируется картой
+Факт встречи:
+- определяется и фиксируется картой мира,
+- основывается на позициях сущностей и правилах встреч,
+- не зависит от причин и мотиваций.
 
-## НЕ означает
-- Обязательное вступление в бой
-- Конкретный сценарий взаимодействия
-- Тактическое столкновение
-- Решение, принимаемое одной из сторон
+Контролёры могут стремиться к встрече или избегать её, но не могут объявить встречу напрямую.
+
+---
+
+### 2. Встреча дискретна по логике
+Условия встреч проверяются в дискретной логике карты (по тикам).
+
+Если условия встречи выполнены, встреча считается произошедшей на границе тика и порождает изменения пространственных статусов.
+
+---
+
+### 3. Встреча по узлам
+Если две (или более) сущности оказываются в одном и том же узле, карта может зафиксировать встречу согласно правилам статусов и типов сущностей (TBD).
+
+Узлы являются естественными точками “стыковки” маршрутов и смены топологии движения.
+
+---
+
+### 4. Встреча на рёбрах ограничена общим ребром
+Встреча на ребре возможна только если сущности находятся:
+- на **одном и том же ребре** графа,
+- и их прогресс перемещения удовлетворяет условию контакта (TBD).
+
+Если сущности находятся на разных рёбрах, встреча на рёбрах невозможна; контакт может произойти только через узел.
+
+---
+
+### 5. Встреча не равна обнаружению
+Обнаружение является сигналом о присутствии, но не фиксирует контакт.
+
+Встреча означает выполнение условия пространственного контакта и обычно приводит к смене статусов (например, перевод в состояние взаимодействия/конфликта), если статусы участников это допускают.
+
+---
+
+### 6. Встреча завершает пространственный цикл
+После фиксации встречи карта гарантирует переход сущностей в устойчивое пространственное состояние:
+- остановка/блокировка движения,
+- перевод в статус взаимодействия,
+- либо иная форма фиксации результата (TBD).
+
+Карта может передать управление внешней системе (бой, событие), но сохраняет истину о пространственном результате и статусах.
+
+---
+
+## Типовые исходы встречи (TBD)
+Встреча может приводить к одному из исходов:
+- запуск внешнего процесса (бой/событие),
+- немедленное изменение статусов без внешнего процесса,
+- взаимодействие с “объектом” (например, узловым событием), если оно моделируется как сущность на карте (TBD).
+
+Конкретные правила исходов определяются вне термина встречи.
+
+---
+
+## Границы ответственности
+
+Встреча на карте **не**:
+- определяет механику боя,
+- не вычисляет урон и эффекты,
+- не решает “кто победил”,
+- не определяет стратегические цели участников.
+
+Встреча фиксирует пространственный факт и переводит сущности в соответствующие пространственные статусы.
+
+---
+
+## Примечания (TBD)
+
+- Конкретное условие контакта на ребре (совпадение прогресса, порог, приоритеты) — TBD.
+- Правила при множественных сущностях в одном узле — TBD.
+- Исключения по статусам (например, “невидим”, “вне карты”, “в бою”) — TBD.
