--- a/LORE/glossary/map/Движение_на_карте.md
+++ b/LORE/glossary/map/Движение_на_карте.md
@@ -1,29 +1,105 @@
-Status: DRAFT
-ID: map_movement
+Status: DRAFT  
+ID: map_movement  
 
 # Движение на карте
 
 ## Кратко
-Движение на карте — это процесс изменения позиции сущности в пространстве карты мира во времени.
+Движение на карте — это процесс изменения позиции сущности во времени, исполняемый картой мира на основе внешних намерений и приводящий к переходам между узлами и рёбрами графа.
 
-## Расширенно
-Движение на карте описывает перемещение сущности в пространстве карты мира, в результате которого изменяется её позиция на карте.
+Движение является **пространственным процессом**, не содержащим в себе причин, мотиваций или стратегических решений.
 
-Движение является непрерывным процессом и происходит в рамках физики карты мира.
-Оно может приводить к встречам, взаимодействиям и возникновению событий, зависящих от расстояния и положения сущностей.
+---
 
-Правила, влияющие на скорость, направление, траекторию или возможность движения, не входят в данное определение и описываются отдельными сущностями и системами.
+## Инварианты
 
-Движение на карте относится исключительно к карте мира и не применяется к другим пространствам, таким как тактический бой, сцены или внутренние локации.
+### 1. Движение исполняется только картой  
+Движение сущности:
+- инициируется на основе намерений, полученных картой извне,
+- исполняется **исключительно картой мира**,
+- приводит к изменению позиции сущности (узел ↔ ребро ↔ узел).
 
-## Где используется
-- Передвижение отрядов по карте мира
-- Преследование и уклонение на карте
-- Достижение точек интереса
-- Возникновение событий при сближении сущностей
+Ни контролёры, ни внешние системы не изменяют позицию напрямую.
 
-## НЕ означает
-- Перемещение в тактическом бою
-- Телепортацию между узлами карты
-- Мгновенное изменение позиции без процесса движения
-- Универсальное понятие движения для всех режимов игры
+---
+
+### 2. Движение привязано к позиции  
+Движение всегда начинается из корректной позиции на карте:
+- либо из узла,
+- либо с текущего положения на ребре.
+
+Если сущность находится на ребре, она может:
+- продолжить движение к одному из двух узлов, связанных данным ребром;
+- изменить направление движения на этом же ребре.
+
+Переход на иное ребро возможен только после достижения узла.
+
+Результатом движения является:
+- обновлённый прогресс на текущем ребре,
+- переход в целевой узел,
+- либо начало движения по следующему ребру маршрута.
+
+---
+
+### 3. Движение дискретно по логике  
+Логика движения обновляется **по тикам карты**.
+
+На каждом тике карта:
+- определяет, допускает ли текущий статус сущности движение,
+- применяет движение в соответствии с активным намерением,
+- обновляет позицию сущности.
+
+Визуальная плавность между тиками достигается интерполяцией и не влияет на логику карты.
+
+---
+
+### 4. Намерение как вход движения  
+Движение не имеет собственной цели.
+
+Для исполнения движения карта использует:
+- актуальное намерение сущности, полученное от контролёра,
+- параметры сущности, влияющие на скорость и доступность движения.
+
+Если намерение отсутствует или движение запрещено статусом, позиция сущности не изменяется.
+
+---
+
+### 5. Движение по рёбрам графа  
+При движении по графу:
+- сущность может находиться на одном ребре в каждый момент времени,
+- движение по ребру выражается через изменение параметра прогресса,
+- завершение движения по ребру приводит к переходу в целевой узел.
+
+Сущность не может одновременно находиться на нескольких рёбрах или узлах.
+
+---
+
+### 6. Взаимодействие движения и встреч  
+Движение является предпосылкой для:
+- обнаружения,
+- встреч и перехватов.
+
+Карта может:
+- прервать движение сущности,
+- изменить её пространственный статус,
+
+если в результате движения были выполнены условия встречи или получен внешний сигнал.
+
+---
+
+## Границы ответственности
+
+Движение на карте **не**:
+- определяет маршрут движения,
+- не выбирает цель,
+- не принимает решений о смене направления,
+- не управляет длительностью занятости сущности.
+
+Движение является исполнением, а не решением.
+
+---
+
+## Примечания (TBD)
+
+- Формат и типы намерений, используемых для движения — TBD.
+- Связь параметров сущности (скорость, эффекты) с величиной изменения прогресса — TBD.
+- Правила приостановки и возобновления движения — TBD.
