--- a/LORE/glossary/map/Дистанция_на_карте.md
+++ b/LORE/glossary/map/Дистанция_на_карте.md
@@ -1,27 +1,72 @@
-Status: DRAFT
-ID: map_distance
+Status: DRAFT  
+ID: map_distance  
 
 # Дистанция на карте
 
 ## Кратко
-Дистанция на карте — это мера расстояния между позициями сущностей в пространстве карты мира.
+Дистанция на карте — это мера пространственной удалённости между двумя позициями сущностей в структуре карты мира, вычисляемая на основе топологии графа.
 
-## Расширенно
-Дистанция на карте используется для количественного определения удалённости между сущностями или объектами карты мира.
-Она применяется при обнаружении, встречах, передвижении и других взаимодействиях, зависящих от пространственного расположения.
+Дистанция используется картой для обнаружения, оценки близости, выбора условий встреч и иных пространственных проверок.
 
-Способ вычисления дистанции, система координат и единицы измерения не входят в данное определение и могут различаться в зависимости от реализации.
+---
 
-Дистанция на карте относится исключительно к карте мира и не используется в других пространствах, таких как тактический бой или внутренние локации.
+## Инварианты
 
-## Где используется
-- Обнаружение сущностей на карте
-- Инициация встреч
-- Преследование и уклонение
-- Оценка удалённости целей и точек интереса
+### 1. Дистанция определяется только между позициями на карте  
+Дистанция может быть вычислена **только** между корректными позициями сущностей на карте.
 
-## НЕ означает
-- Время, необходимое для перемещения
-- Длину маршрута или пути
-- Географические или сюжетные границы
-- Дистанцию в тактическом бою
+Статичные объекты, не являющиеся сущностями на карте (например, точки интереса), не участвуют в вычислении дистанции напрямую.
+
+---
+
+### 2. Топологическая природа дистанции  
+Дистанция на карте определяется **структурой графа**, а не геометрическими координатами.
+
+Она вычисляется как мера пути между позициями:
+- по рёбрам графа,
+- с учётом их порядка и связности.
+
+Визуальное расположение элементов карты не влияет на вычисление дистанции.
+
+---
+
+### 3. Учет позиции на ребре  
+Если сущность находится на ребре, её вклад в дистанцию учитывается **частично**, пропорционально прогрессу перемещения по данному ребру.
+
+Дистанция между двумя сущностями на одном ребре может быть вычислена напрямую как разность их прогрессов.
+
+---
+
+### 4. Дистанция не является временем  
+Дистанция на карте не выражает длительность перемещения и не учитывает скорость.
+
+Она может использоваться совместно со скоростью для оценки времени достижения, но сама по себе не содержит временной компоненты.
+
+---
+
+### 5. Использование дистанции в логике карты  
+Карта использует дистанцию для:
+- проверки условий обнаружения,
+- определения возможности и момента встречи,
+- сравнения близости целей,
+- оценки пространственных условий взаимодействий.
+
+Дистанция не используется для принятия стратегических решений и не является намерением.
+
+---
+
+## Границы ответственности
+
+Дистанция на карте **не**:
+- определяет маршрут движения,
+- не учитывает намерения контролёров,
+- не определяет скорость или время прибытия,
+- не зависит от визуального масштаба карты.
+
+---
+
+## Примечания (TBD)
+
+- Конкретный способ агрегации дистанции по нескольким рёбрам (сумма весов, количество рёбер и т.п.) — TBD.
+- Использование весов рёбер (дороги, пересечённая местность и др.) — TBD.
+- Ограничения глубины поиска при вычислении дистанции — TBD.
