--- a/LORE/glossary/map/Маршрут_на_карте.md
+++ b/LORE/glossary/map/Маршрут_на_карте.md
@@ -1,28 +1,115 @@
-Status: DRAFT
-ID: map_route
+Status: DRAFT  
+ID: map_route  
 
 # Маршрут на карте
 
 ## Кратко
-Маршрут на карте — это запланированная траектория движения сущности по карте мира.
+Маршрут на карте — это представление планируемой траектории движения сущности по структуре карты мира в виде последовательности узлов и/или рёбер графа, предназначенное для исполнения картой.
 
-## Расширенно
-Маршрут на карте описывает намерение сущности перемещаться между позициями или точками интереса на карте мира.
-Он может включать одну или несколько промежуточных точек и может быть изменён, прерван или отменён в процессе движения.
+Маршрут является способом "как идти к цели", но не является решением "какую цель выбрать".
 
-Маршрут не определяет фактическое движение и не гарантирует его выполнение.
-Фактическое перемещение определяется движением на карте и может отклоняться от маршрута в результате встреч, событий или изменений решений.
+---
 
-Маршрут на карте применяется исключительно к карте мира и не используется в тактическом бою или других пространствах.
+## Инварианты
 
-## Где используется
-- Планирование перемещения отрядов
-- Управление передвижением акторов
-- Автопутешествия и следование к цели
-- Изменение целей движения в процессе
+### 1. Маршрут относится к намерению, а не к карте как мотивации
+Маршрут используется как часть намерения движения:
+- контролёр формирует цель,
+- карта строит маршрут к цели (MVP),
+- карта исполняет движение по маршруту.
 
-## НЕ означает
-- Фактическое движение сущности
-- Гарантированное достижение цели
-- Дорогу или физический путь на карте
-- Навигационную сетку или навмеш
+Маршрут не содержит причин и мотиваций и не заменяет цель.
+
+---
+
+### 2. Маршрут является топологическим
+Маршрут определяется только через структуру графа:
+- последовательность узлов,
+- и/или последовательность рёбер между ними.
+
+Геометрические координаты и визуальное расположение не являются частью маршрута.
+
+---
+
+### 3. Маршрут валиден только относительно текущей позиции
+Маршрут должен быть согласован с текущей позицией сущности:
+- если сущность находится в узле, маршрут начинается с этого узла,
+- если сущность находится на ребре, маршрут может начинаться с продолжения движения по этому ребру к одному из его концов.
+
+Переход на иное ребро возможен только после достижения узла.
+
+---
+
+### 4. Смена маршрута на ребре ограничена направлением
+Если сущность находится на ребре, изменение намерения может привести только к:
+- продолжению движения к одному из двух узлов данного ребра, или
+- развороту по этому же ребру в обратную сторону.
+
+Непосредственный переход на третье ребро из позиции на ребре недопустим.
+
+---
+
+### 5. Пересчёт маршрута и изменение цели
+Контролёр может изменить цель (и, как следствие, маршрут) в любой момент.
+
+При изменении цели:
+- карта прекращает исполнение предыдущего маршрута,
+- формирует новый маршрут к новой цели (MVP),
+- при необходимости учитывает текущее положение сущности (узел/ребро) согласно ограничениям смены топологии.
+
+---
+
+### 6. Маршрут может стать недействительным
+Маршрут может стать недействительным, если:
+- целевая сущность дерегистрирована из карты,
+- целевой узел/POI недоступен (например, отсутствует связность),
+- структура карты изменилась (TBD).
+
+В этом случае карта:
+- прекращает движение по маршруту,
+- фиксирует факт недостижимости/недействительности,
+- уведомляет контролёра сущности.
+
+Карта не принимает решений о дальнейшем поведении; контролёр обязан сформировать новое намерение или оставить сущность без цели.
+
+---
+
+## Минимальное представление маршрута (MVP)
+
+Маршрут для исполнения картой может быть представлен как:
+- последовательность узлов, где каждая пара соседних узлов соединена ребром,
+или
+- последовательность рёбер, которые нужно пройти по порядку.
+
+Конкретный формат данных — TBD.
+
+---
+
+## Роль маршрута в движении и встречах
+
+Маршрут используется картой для:
+- выбора следующего ребра при нахождении сущности в узле,
+- продолжения движения по текущему ребру,
+- определения момента достижения цели (прибытие в целевой узел или контакт с целью-сущностью).
+
+Маршрут не определяет правила встреч; встречи определяются позициями, статусами и правилами встреч.
+
+---
+
+## Границы ответственности
+
+Маршрут на карте **не**:
+- не определяет, какую цель следует выбрать,
+- не содержит логики реакции на обнаружение,
+- не определяет тактику преследования и отступления,
+- не управляет временем ожиданий и занятости.
+
+Маршрут — это план перемещения по графу для исполнения картой.
+
+---
+
+## Примечания (TBD)
+
+- Алгоритм построения маршрута картой (кратчайший путь, веса рёбер и т.п.) — TBD.
+- Частичный маршрут и перепланирование (например, строить маршрут только до ближайшего узла) — TBD.
+- Политики при изменении графа во время движения — TBD.
