--- a/LORE/glossary/map/Обнаружение_на_карте.md
+++ b/LORE/glossary/map/Обнаружение_на_карте.md
@@ -1,29 +1,104 @@
-Status: DRAFT
-ID: map_detection
+Status: DRAFT  
+ID: map_detection  
 
 # Обнаружение на карте
 
 ## Кратко
-Обнаружение на карте — это процесс выявления сущности другой сущности на карте мира на основе расстояния и положения.
+Обнаружение на карте — это процесс установления факта, что одна сущность на карте находится в зоне обнаружения другой сущности (или в зоне обнаружения относительно якоря точки интереса), на основе дистанции и правил обнаружения.
 
-## Расширенно
-Обнаружение на карте описывает момент, когда одна сущность становится известной или заметной для другой в пространстве карты мира.
+Обнаружение является пространственным фактом, вычисляемым картой, и используется как вход для принятия решений контролёрами.
 
-Обнаружение происходит в контексте карты мира и основывается на взаимном расположении сущностей, их движении и других факторов карты.
-Сам факт обнаружения не определяет дальнейшее поведение сущностей и не подразумевает враждебность, взаимодействие или бой.
+---
 
-Правила, влияющие на дальность, условия или последствия обнаружения, не входят в данное определение и описываются отдельно.
+## Инварианты
 
-Обнаружение на карте применяется исключительно к карте мира и не используется в других пространствах, таких как тактический бой или внутренние локации.
+### 1. Обнаружение вычисляется картой
+Факт обнаружения:
+- вычисляется картой мира,
+- не является решением контролёра,
+- не зависит от мотиваций и причин.
 
-## Где используется
-- Инициация встреч между отрядами
-- Начало преследования или уклонения
-- Реакция акторов на присутствие других сущностей
-- Запуск событий, связанных с близостью на карте
+Контролёры получают результат обнаружения как событие/сигнал и могут менять намерения.
 
-## НЕ означает
-- Автоматическое вступление в бой
-- Определение отношений (враг, союзник)
-- Обнаружение в тактическом бою
-- Гарантированное знание характеристик или намерений сущности
+---
+
+### 2. Обнаружение дискретно по логике
+Обнаружение обновляется в логике тиков карты.
+
+События обнаружения (появление/исчезновение целей) фиксируются на границах тиков и могут использоваться контролёрами для реактивных изменений намерений.
+
+---
+
+### 3. Обнаружение основано на дистанции
+Условие обнаружения определяется через дистанцию на карте:
+- между позициями двух сущностей, или
+- между позицией сущности и якорной позицией точки интереса (узел/область графа), если правила требуют такой проверки.
+
+Визуальная интерполяция не влияет на вычисление дистанции и обнаружения.
+
+---
+
+### 4. Симметричность обнаружения не гарантируется
+Обнаружение может быть:
+- односторонним (A видит B, но B не видит A),
+- двусторонним.
+
+Это определяется правилами обнаружения (TBD) и параметрами сущностей/статусов.
+
+---
+
+### 5. Обнаружение не является встречей
+Факт обнаружения:
+- не переводит сущности в состояние встречи,
+- не останавливает движение автоматически,
+- не запускает бой сам по себе.
+
+Обнаружение — это только сигнал, который может повлиять на дальнейшие намерения и, как следствие, на движение и встречи.
+
+---
+
+### 6. Статусы влияют на обнаружение
+Способность обнаруживать и быть обнаруженным зависит от пространственного статуса сущности.
+
+Некоторые статусы могут:
+- запрещать обнаружение,
+- снижать/увеличивать зону обнаружения,
+- менять правила симметрии.
+
+---
+
+### 7. Параметры сущностей как вход обнаружения
+Условия обнаружения могут зависеть от характеристик, навыков и эффектов сущностей (например, разведки и маскировки), передаваемых карте в виде параметров.
+
+Карта использует итоговые значения параметров для вычисления факта обнаружения, не интерпретируя их смысл.
+
+---
+
+## Результаты обнаружения
+
+Обнаружение может порождать события (или обновления состояния), например:
+- "цель появилась в зоне обнаружения",
+- "цель покинула зону обнаружения",
+- "обнаружен объект интереса (POI-якорь/зона)".
+
+Формат событий и их доставка контролёрам — TBD, но карта является источником истины о факте обнаружения.
+
+---
+
+## Границы ответственности
+
+Обнаружение на карте **не**:
+- выбирает цели и приоритеты,
+- не назначает поведение (преследовать/убегать/патрулировать),
+- не инициирует бой,
+- не управляет временем ожиданий и расписаниями.
+
+Это пространственный сигнал для внешних систем принятия решений.
+
+---
+
+## Примечания (TBD)
+
+- Правила зоны обнаружения (радиус/порог по дистанции, модификаторы) — TBD.
+- Приоритеты и фильтры обнаружения (кого/что считать релевантным) — TBD.
+- Обнаружение относительно областей (наборов узлов) для POI — TBD.
