--- a/LORE/glossary/map/Позиция_на_карте.md
+++ b/LORE/glossary/map/Позиция_на_карте.md
@@ -1,26 +1,80 @@
-Status: DRAFT
-ID: map_position
+Status: DRAFT  
+ID: map_position  
 
 # Позиция на карте
 
 ## Кратко
-Позиция на карте — это положение сущности в пространстве карты мира.
+Позиция на карте — это формализованное пространственное состояние сущности, определяющее её положение в структуре карты мира в текущий момент времени.
 
-## Расширенно
-Позиция на карте описывает, где именно в карте мира находится сущность в данный момент.
-Она используется для определения расстояний, передвижения, встреч и других взаимодействий на карте мира.
+Позиция описывается **топологически**, а не геометрически, и является единственным допустимым способом определения местоположения сущности для логики карты.
 
-Позиция на карте относится исключительно к карте мира и не применяется к другим пространствам или режимам, таким как тактический бой, сцены или внутренние локации.
+---
 
-Форма представления позиции (координаты, векторы, иные системы) не является частью данного определения.
+## Инварианты
 
-## Где используется
-- Определение местоположения отрядов
-- Передвижение по карте мира
-- Обнаружение и встречи между сущностями
-- Взаимодействие с точками интереса
+### 1. Позиция существует только у сущностей на карте  
+Позиция на карте определена **только** для сущностей на карте.
 
-## НЕ означает
-- Позицию сущности в тактическом бою
-- Расположение внутри поселений или локаций
-- Конкретную систему координат или единицы измерения
+Статичные объекты (например, города, точки интереса, состояния узлов) не обладают позицией на карте в смысле данного термина.
+
+---
+
+### 2. Топологическая модель позиции  
+Позиция сущности на карте может находиться в одном из двух состояний:
+
+- **Позиция в узле**  
+  Сущность находится в конкретном узле графа карты мира.
+
+- **Позиция на ребре**  
+  Сущность находится на ребре между двумя узлами графа и описывается:
+  - исходным узлом,
+  - целевым узлом,
+  - параметром прогресса перемещения.
+
+Параметр прогресса отражает относительное положение сущности между узлами и не является геометрической координатой.
+
+---
+
+### 3. Источник истины  
+Позиция сущности:
+- хранится и обновляется **исключительно картой мира**,
+- не может изменяться напрямую внешними системами или контролёрами.
+
+Любое изменение позиции является результатом процессов карты.
+
+---
+
+### 4. Связь с гибридным временем  
+Изменение позиции происходит в рамках логики карты, обновляемой дискретно (по тикам).
+
+Промежуточные визуальные положения, получаемые интерполяцией между тиками, **не считаются позицией на карте** и не используются в логике принятия решений.
+
+---
+
+### 5. Роль позиции во взаимодействиях  
+Позиция сущности используется картой для:
+- вычисления дистанций,
+- определения условий обнаружения,
+- проверки возможности встреч и перехватов,
+- определения допустимых пространственных переходов.
+
+Ни одно пространственное взаимодействие не может быть инициировано без определения позиции участвующих сущностей.
+
+---
+
+## Границы ответственности
+
+Позиция на карте **не**:
+- содержит информации о причинах движения,
+- отражает намерения сущности или контролёра,
+- определяет длительность нахождения в состоянии.
+
+Позиция является исключительно **описанием факта пространственного положения**.
+
+---
+
+## Примечания (TBD)
+
+- Формат идентификации узлов и рёбер — TBD.
+- Допустимые диапазоны и правила изменения параметра прогресса — TBD.
+- Правила перехода позиции из состояния “на ребре” в состояние “в узле” — описываются в `Движение на карте` (TBD).
