--- a/LORE/glossary/map/Скорость_на_карте.md
+++ b/LORE/glossary/map/Скорость_на_карте.md
@@ -1,27 +1,68 @@
-Status: DRAFT
-ID: map_speed
+Status: DRAFT  
+ID: map_speed  
 
 # Скорость на карте
 
 ## Кратко
-Скорость на карте — это параметр, определяющий, с какой интенсивностью сущность перемещается по карте мира.
+Скорость на карте — это параметр, определяющий интенсивность изменения позиции сущности при движении по карте мира в рамках тиков карты.
 
-## Расширенно
-Скорость на карте характеризует темп движения сущности при осуществлении движения на карте мира.
-Она влияет на то, как быстро изменяется позиция сущности во времени, и, как следствие, на возможность преследования, уклонения и своевременного достижения целей.
+Скорость используется картой для вычисления того, как быстро изменяется прогресс перемещения по ребру и как быстро сущность достигает узлов графа.
 
-Скорость на карте может зависеть от различных факторов, однако сами факторы, их источники и способы расчёта не входят в данное определение и описываются отдельно.
+---
 
-Скорость на карте применяется исключительно в контексте карты мира и не используется в других пространствах, таких как тактический бой или внутренние локации.
+## Инварианты
 
-## Где используется
-- Расчёт передвижения отрядов по карте мира
-- Преследование и уход от преследования
-- Определение времени достижения точки интереса
-- Сравнение мобильности сущностей на карте
+### 1. Скорость применяется только при движении  
+Скорость влияет на позицию сущности только в процессе движения, исполняемого картой.
 
-## НЕ означает
-- Скорость действий в тактическом бою
-- Анимационную скорость или визуальный темп
-- Конкретные числовые значения или формулы расчёта
-- Универсальный параметр скорости для всех режимов игры
+Если сущность не движется (по статусу или по отсутствию намерения), скорость не приводит к изменению позиции.
+
+---
+
+### 2. Скорость не является геометрической координатной скоростью  
+Скорость на карте является **скоростью по структуре графа**, а не скоростью в непрерывном пространстве.
+
+Скорость выражает, с какой интенсивностью изменяется прогресс по ребру в единицу времени карты.
+
+---
+
+### 3. Скорость действует в логике тиков  
+Скорость используется в дискретной логике карты (тиках).
+
+На каждом тике карта вычисляет изменение прогресса перемещения по текущему ребру на основе скорости и длительности тика.
+
+Визуальная интерполяция между тиками не влияет на вычисление скорости и не является источником истины.
+
+---
+
+### 4. Направление движения отделено от скорости  
+Скорость определяет величину изменения прогресса, а направление определяет знак изменения:
+- при движении к целевому узлу прогресс возрастает,
+- при движении к исходному узлу прогресс убывает.
+
+Изменение направления возможно на ребре (разворот), но не изменяет топологию движения: сущность остаётся на том же ребре до достижения узла.
+
+---
+
+### 5. Скорость является параметром сущности и/или эффектов  
+Базовая скорость может быть свойством сущности на карте и может модифицироваться внешними эффектами.
+
+Карта использует итоговую (эффективную) скорость как вход для расчёта движения, не интерпретируя причины модификаций.
+
+---
+
+## Границы ответственности
+
+Скорость на карте **не**:
+- определяет цель движения и выбор маршрута,
+- не определяет причины ускорения/замедления,
+- не управляет временем ожиданий и занятости,
+- не определяет правила обнаружения (используется только как вход для движения).
+
+---
+
+## Примечания (TBD)
+
+- Единицы измерения скорости на карте (например, “доля ребра за тик” или “доля ребра за секунду карты”) — TBD.
+- Наличие разных скоростей по типам рёбер (дороги, болота, горы) — TBD.
+- Минимальные и максимальные значения скорости, а также влияние статусов (например, “замедлен”, “остановлен”) — TBD.
