--- a/LORE/glossary/map/Статус_сущности_на_карте.md
+++ b/LORE/glossary/map/Статус_сущности_на_карте.md
@@ -1,29 +1,133 @@
-Status: DRAFT
-ID: map_entity_status
+Status: DRAFT  
+ID: map_entity_status  
 
 # Статус сущности на карте
 
 ## Кратко
-Статус сущности на карте — это текущее состояние сущности в рамках карты мира, определяющее её режим присутствия и допустимые взаимодействия.
+Статус сущности на карте — это пространственное состояние сущности, определяющее,
+какие действия карты допустимы по отношению к данной сущности в текущий момент времени.
 
-## Расширенно
-Статус сущности на карте описывает, в каком режиме находится сущность на карте мира в данный момент.
-Он используется для согласования движения, обнаружения, встреч и других событий карты.
+Статус используется картой для управления движением, обнаружением и встречами,
+но не отражает причин, намерений или внутренних процессов сущности.
 
-Статус позволяет различать состояния сущности, такие как участие в движении, нахождение во встрече, ожидание или иное состояние, влияющее на поведение и взаимодействия на карте.
+---
 
-Конкретный набор статусов, их значения и правила переходов между ними не входят в данное определение и задаются отдельно в структурных данных и системах.
+## Инварианты
 
-Статус сущности на карте применяется исключительно в контексте карты мира и не используется для описания состояний в тактическом бою, локациях или сценах.
+### 1. У каждой сущности всегда есть ровно один статус  
+Сущность на карте всегда находится **ровно в одном пространственном статусе**.
 
-## Где используется
-- Управление передвижением сущностей на карте мира
-- Разрешение и блокировка взаимодействий
-- Обработка обнаружения и встреч
-- Синхронизация логики контролёров и карты
+Отсутствие статуса или одновременное наличие нескольких статусов недопустимо.
 
-## НЕ означает
-- Универсальный статус сущности во всех режимах игры
-- Полный перечень возможных статусов
-- Конкретные механики поведения или ИИ
-- Статусы сущностей в тактическом бою
+---
+
+### 2. Статус определяет допустимые процессы карты  
+Статус сущности определяет:
+- может ли сущность двигаться,
+- может ли быть обнаружена,
+- может ли участвовать во встречах,
+- может ли изменять позицию.
+
+Карта **не исполняет** процессы, запрещённые текущим статусом сущности.
+
+---
+
+### 3. Статус не является поведением  
+Статус:
+- не определяет намерения,
+- не задаёт целей,
+- не содержит логики принятия решений.
+
+Статус — это режим участия сущности в пространственной логике карты.
+
+---
+
+### 4. Изменение статуса контролируется картой  
+Изменение статуса:
+- инициируется картой в результате пространственных событий (встреча, достижение узла и т.п.),
+- либо по внешнему сигналу (завершение боя, события и т.п.).
+
+Контролёры **не изменяют статус напрямую**, а лишь реагируют на его изменение.
+
+---
+
+### 5. Статусы только у зарегистрированных сущностей  
+Статусы применимы только к сущностям, зарегистрированным в карте мира.
+
+Сущность, отсутствующая на карте, не имеет позиции и пространственного статуса.
+
+---
+
+## Минимальный набор пространственных статусов (MVP)
+
+### 1. `Idle`
+Сущность:
+- находится в узле,
+- не движется,
+- может быть обнаружена,
+- может участвовать во встречах.
+
+Это базовый “ожидающий” статус.
+
+---
+
+### 2. `Moving`
+Сущность:
+- находится на ребре или начинает движение из узла,
+- позиция изменяется по логике движения,
+- может быть обнаружена,
+- может участвовать во встречах (с ограничениями).
+
+---
+
+### 3. `Engaged`
+Сущность:
+- участвует во встрече или внешнем процессе,
+- движение остановлено,
+- позиция зафиксирована,
+- обнаружение и новые встречи запрещены (если не указано иное).
+
+Используется для боёв, диалогов и иных внешних взаимодействий.
+
+---
+
+### 4. `Disabled`
+Сущность:
+- присутствует на карте,
+- не может двигаться,
+- не может участвовать во встречах,
+- может быть временно удалена из пространственного слоя карты и не участвовать в пространственных процессах до повторной регистрации.
+
+Пример: оглушение, блокировка, особые состояния.
+
+---
+
+## Переходы статусов
+
+Переходы между статусами:
+- осуществляются картой,
+- происходят на границах тиков или при обработке внешних сигналов,
+- не должны приводить к неопределённым состояниям.
+
+Конкретные правила переходов — TBD.
+
+---
+
+## Границы ответственности
+
+Статус сущности на карте **не**:
+- отражает боевые состояния (HP, эффекты и т.п.),
+- не описывает AI-состояния,
+- не управляет временем занятости,
+- не заменяет механику событий и боёв.
+
+Статус существует **исключительно для пространственной логики карты**.
+
+---
+
+## Примечания (TBD)
+
+- Вход сущности во внутреннее пространство точки интереса (например, города) приводит к её дерегистрации из карты, а не к изменению пространственного статуса.
+- Возможность расширения набора статусов — TBD.
+- Правила взаимодействия нескольких сущностей в одном статусе — TBD.
+- Исключения и специальные статусы — TBD.
