--- a/LORE/glossary/map/Сущность_на_карте.md
+++ b/LORE/glossary/map/Сущность_на_карте.md
@@ -1,33 +1,96 @@
-Status: DRAFT
-ID: map_entity
+Status: DRAFT  
+ID: map_entity  
 
 # Сущность на карте
 
 ## Кратко
-Сущность на карте — это любой объект мира, существующий в пространстве карты мира и имеющий позицию на карте.
+Сущность на карте — это объект мира, зарегистрированный в карте мира и обладающий **пространственным состоянием**, которое карта отслеживает и изменяет в процессе движения и взаимодействий.
 
-## Расширенно
-Сущность на карте является обобщающим понятием для объектов, которые присутствуют на карте мира и участвуют в её симуляции.
-Сущность на карте может быть статичной или подвижной.
+Сущность на карте **не принимает решений** и **не управляет своим поведением**; она является носителем пространственного состояния и участником процессов карты.
 
+---
+
+## Инварианты
+
+### 1. Пространственная регистрация  
+Сущность считается сущностью на карте только в период её регистрации в карте мира.
+Дерегистрация означает полное отсутствие сущности в пространственном слое карты.
+
+Карта хранит и обновляет только те данные сущности, которые необходимы для описания её пространственного состояния.
+
+---
+
+### 2. Разделение ответственности  
 Сущность на карте:
-- имеет позицию на карте (см. «Позиция на карте»),
-- может участвовать во взаимодействиях на основе расстояния (см. «Дистанция на карте»),
-- может быть обнаружена и участвовать во встречах (см. «Обнаружение на карте», «Встреча на карте»), если это применимо к её типу.
+- **не является** источником намерений,
+- **не принимает** решений о целях и маршрутах,
+- **не изменяет** своё положение самостоятельно.
 
-Конкретные типы сущностей на карте (например, отряд, точка интереса) описываются отдельными терминами и/или структурными данными.
-Сущность на карте не задаёт поведение, управление или назначение — это роль базового объекта в пространстве карты мира.
+Все намерения формируются внешними по отношению к карте сущностями (контролёрами).
 
-Сущность на карте относится исключительно к карте мира и не описывает объекты внутри тактического боя или внутренних локаций.
+---
 
-## Где используется
-- Унифицированное описание объектов, существующих на карте мира
-- Основа для правил обнаружения и встреч
-- Размещение объектов на карте мира (статичных и динамических)
-- Привязка целей и маршрутов к объектам карты
+### 3. Позиция на карте  
+Каждая сущность на карте имеет позицию, определяемую картой как:
+- нахождение в узле, или
+- нахождение на ребре между узлами с прогрессом перемещения.
 
-## НЕ означает
-- Любую сущность мира в целом (вне карты мира)
-- Сущность в тактическом бою или внутри локаций
-- Обязательное наличие контролёра или поведения
-- Конкретный тип (отряд, поселение, событие) — это уточняется отдельно
+Позиция является частью пространственного состояния и обновляется только картой.
+
+---
+
+### 4. Пространственный статус  
+Сущность на карте всегда находится в одном из **пространственных статусов**, определяющих:
+- может ли она двигаться,
+- может ли участвовать во встречах,
+- может ли быть обнаружена.
+
+Перечень статусов и правила переходов определяются отдельно в `Статус сущности на карте`.
+
+---
+
+### 5. Участие во взаимодействиях  
+Сущность на карте может участвовать во взаимодействиях карты:
+- обнаружении,
+- встречах,
+- пространственных переходах,
+
+если её текущий статус допускает соответствующее участие.
+
+---
+
+## Связь с контролёром
+
+- Сущность на карте может быть связана только одним **контролёром** в один момент.
+- Контролёры формируют намерения для сущности и передают их карте.
+- Карта исполняет движение и взаимодействия **на основе полученных намерений**, не интерпретируя причины их появления.
+
+Сущность на карте не знает:
+- кто и почему сформировал намерение,
+- какие внешние события повлияли на решение контролёра.
+
+---
+
+## Взаимодействие с внешними системами
+
+- Сущность на карте может временно участвовать во внешних процессах (бой, события и т.п.).
+- Результаты таких процессов применяются к сущности через карту в виде изменения пространственного состояния или статуса.
+- Карта не хранит и не обрабатывает логику этих процессов.
+
+---
+
+## Границы ответственности
+
+Сущность на карте **не отвечает** за:
+- принятие решений,
+- хранение целей и мотиваций,
+- расчёт времени ожиданий и занятости,
+- механику боя и иных не-пространственных процессов.
+
+---
+
+## Примечания (TBD)
+
+- Не все сущности мира являются сущностями на карте; регистрация в карте означает участие в пространственных процессах.
+- Типы сущностей (отряд, персонаж игрока, караван и т.п.) описываются вне карты и используют сущность на карте как пространственное представление.
+- Возможность связывания нескольких сущностей с одним контролёром — TBD.
