--- a/LORE/glossary/map/Точка_интереса.md
+++ b/LORE/glossary/map/Точка_интереса.md
@@ -1,28 +1,94 @@
-Status: DRAFT
-ID: point_of_interest
+Status: DRAFT  
+ID: map_poi  
 
 # Точка интереса
 
 ## Кратко
-Точка интереса — это статичный объект на карте мира, представляющий потенциальную цель или источник взаимодействия для движущихся сущностей.
+Точка интереса (POI) — это статичный объект мира, привязанный к определённой позиции в структуре карты мира, представляющий потенциальную цель, источник событий или контейнер сущностей, **не участвующих в пространственной логике карты**.
 
-## Расширенно
-Точка интереса описывает фиксированное место в пространстве карты мира, обладающее значением для навигации, обнаружения и взаимодействия.
-Точки интереса могут быть различной природы и назначения, однако само определение не фиксирует их типы, функции или содержимое.
+Точка интереса **не является сущностью на карте** и не участвует в движении, обнаружении и встречах как активный участник.
 
-Точка интереса имеет позицию на карте мира и может обладать областью влияния или обнаружения.
-Факт нахождения или приближения к точке интереса может приводить к событиям или взаимодействиям, но сами последствия не входят в данное определение.
+---
 
-Точка интереса относится исключительно к карте мира и не описывает внутреннюю структуру локаций или сцены, связанные с ней.
+## Инварианты
 
-## Где используется
-- Цели перемещения отрядов по карте мира
-- Обнаружение и навигация
-- Инициация событий при приближении или входе в область
-- Пространственная привязка локаций и объектов мира
+### 1. Точка интереса не является сущностью на карте  
+Точка интереса:
+- не имеет пространственного статуса,
+- не движется,
+- не обнаруживается как сущность,
+- не участвует во встречах.
 
-## НЕ означает
-- Конкретный тип поселения, логова или объекта
-- Наличие экономики, квестов или NPC
-- Внутреннюю карту или тактическую сцену
-- Обязательное взаимодействие при каждом посещении
+POI существует на карте как **якорь и ориентир**, а не как активный участник пространства.
+
+---
+
+### 2. Пространственная привязка POI  
+Каждая точка интереса привязана к структуре карты:
+- одному узлу,
+- или набору узлов,
+- или области графа (TBD).
+
+Эта привязка используется для:
+- вычисления дистанции до POI,
+- логики обнаружения относительно POI,
+- ограничений поведения контролёров (патрули, зоны влияния и т.п.).
+
+---
+
+### 3. POI как контейнер сущностей мира  
+Точка интереса может содержать сущности мира (NPC, отряды, жителей, гарнизоны и т.п.), которые:
+
+- **отсутствуют на карте мира**,
+- не имеют позиции и пространственного статуса,
+- не участвуют в движении, обнаружении и встречах.
+
+Нахождение сущности внутри POI означает её **дерегистрацию из карты**.
+
+---
+
+### 4. Взаимодействие сущности с POI  
+Когда сущность на карте достигает позиции POI:
+- карта фиксирует достижение якорной позиции,
+- может быть инициировано событие или встреча (через внешние системы),
+- по внешнему сигналу сущность может быть дерегистрирована из карты (вход внутрь POI).
+
+Карта не принимает решений о характере взаимодействия с POI.
+
+---
+
+### 5. Возврат сущности из POI на карту  
+Выход сущности из POI:
+- осуществляется внешней системой (город, квест, фракция и т.п.),
+- приводит к регистрации сущности в карте,
+- сущность появляется на карте в якорной позиции POI (если не указано иное).
+
+---
+
+## Использование POI в логике карты
+
+Точка интереса может использоваться картой как:
+- якорь для вычисления дистанции,
+- ориентир для обнаружения,
+- цель движения (через намерения контролёров),
+- источник внешних сигналов (через интеграцию с другими системами).
+
+---
+
+## Границы ответственности
+
+Точка интереса **не**:
+- управляет сущностями на карте,
+- не изменяет статусы сущностей,
+- не принимает решений о движении,
+- не участвует в пространственных процессах напрямую.
+
+Вся активная логика, связанная с POI, реализуется **вне карты**.
+
+---
+
+## Примечания (TBD)
+
+- Типы точек интереса (город, логово, подземелье, портал и т.п.) — TBD.
+- Правила областей влияния POI — TBD.
+- Возможность временных POI — TBD.
