--- a/LORE/glossary/map/Цель_на_карте.md
+++ b/LORE/glossary/map/Цель_на_карте.md
@@ -1,28 +1,122 @@
-Status: DRAFT
-ID: map_target
+Status: DRAFT  
+ID: map_target  
 
 # Цель на карте
 
 ## Кратко
-Цель на карте — это объект или позиция на карте мира, к достижению или взаимодействию с которой стремится сущность.
+Цель на карте — это формализованное указание, к какому объекту или позиции в структуре карты мира стремится сущность, выраженное как часть намерения контролёра.
 
-## Расширенно
-Цель на карте описывает намерение сущности на карте мира и определяет, к чему направлены её действия и движение.
-Цель может быть связана с конкретной сущностью на карте, точкой интереса или абстрактной позицией.
+Цель описывает "куда/к чему", но не описывает "как именно идти": построение и исполнение маршрута остаётся ответственностью карты мира.
 
-Цель на карте не определяет способ достижения цели и не гарантирует её выполнение.
-Фактическое движение, маршрут и реакции на события могут приводить к изменению, отмене или замене цели.
+---
 
-Цель на карте применяется исключительно в контексте карты мира и используется для управления передвижением и поведением сущностей.
+## Инварианты
 
-## Где используется
-- Определение намерений отрядов на карте мира
-- Постановка маршрутов и направлений движения
-- Преследование, уклонение и патрулирование
-- Реакция на встречи и события на карте
+### 1. Цель является входом для карты, а не её решением
+Цель:
+- формируется контролёром (игроком или AI) и передаётся в карту,
+- используется картой как вход для движения и условий взаимодействий,
+- не выбирается и не интерпретируется картой как мотивация.
 
-## НЕ означает
-- Гарантированное достижение результата
-- Конкретный сценарий поведения или алгоритм ИИ
-- Цель в тактическом бою или сюжетной сцене
-- Обязательное наличие маршрута или движения
+---
+
+### 2. Цель является ссылкой на объект карты или позицию карты
+Цель указывает на один из допустимых типов объектов/позиций в структуре карты мира:
+- узел,
+- сущность на карте,
+- точка интереса (через её якорную привязку к узлу/области).
+
+Цель не может указывать на объекты, не имеющие представления в структуре карты.
+
+---
+
+### 3. Цель не является маршрутом
+Цель не содержит пути перемещения.
+
+При наличии цели карта может:
+- построить маршрут к цели (TBD),
+- или использовать предоставленный маршрут (если такой механизм будет введён позже, TBD).
+
+---
+
+### 4. Цель может быть недостижима
+Цель может оказаться временно или постоянно недостижимой
+(например, отсутствует связность графа, целевая сущность исчезла,
+целевая сущность или точка интереса дерегистрирована из карты).
+
+В случае выявления недостижимости цели карта:
+- прекращает попытки движения к данной цели,
+- фиксирует факт недостижимости,
+- уведомляет связанный с сущностью контролёр.
+
+Карта не принимает решений о дальнейших действиях сущности.
+Получив уведомление о недостижимости цели, контролёр обязан
+сформировать новое намерение или оставить сущность без цели.
+
+---
+
+## Допустимые типы целей (MVP)
+
+### 1. Цель-узел (`NodeTarget`)
+Цель указывает на конкретный узел графа.
+
+Использование:
+- движение к городу (POI-якорь в узле),
+- перемещение в заданную точку карты.
+
+---
+
+### 2. Цель-сущность (`EntityTarget`)
+Цель указывает на конкретную сущность на карте.
+
+Использование:
+- преследование,
+- сближение для встречи,
+- сопровождение (движение "рядом" — TBD).
+
+Если целевая сущность исчезает с карты (дерегистрация), цель становится недействительной.
+
+---
+
+### 3. Цель-POI (`POITarget`)
+Цель указывает на точку интереса через её якорную позицию (узел/область).
+
+Использование:
+- прийти к городу/логову,
+- начать взаимодействие с POI (внешняя логика).
+
+POI сам не является сущностью на карте и не участвует во встречах как участник.
+
+---
+
+## Роль цели в пространственных процессах
+
+Цель используется картой для:
+- выбора направления движения (через построение маршрута к якорю цели),
+- определения достижения цели (прибытие в узел или выполнение условия контакта),
+- генерации событий "цель достигнута / цель недостижима" (TBD).
+
+Цель не определяет:
+- приоритеты,
+- правила боя,
+- причины поведения.
+
+---
+
+## Границы ответственности
+
+Цель на карте **не**:
+- не задаёт маршрут и последовательность рёбер,
+- не содержит правил реакции на обнаружение и встречи,
+- не определяет тактику преследования/отступления,
+- не управляет временем ожиданий и занятости.
+
+Это формальный идентификатор желаемого объекта/позиции.
+
+---
+
+## Примечания (TBD)
+
+- Возможность составных целей ("дойти до узла и войти внутрь POI") — TBD.
+- Возможность целей-ограничений (например, "не отходить дальше R от POI") — TBD.
+- Формат событий по целям (достигнута/потеряна/недостижима) — TBD.
