--- a/LORE/glossary/meta/Карта_мира.md
+++ b/LORE/glossary/meta/Карта_мира.md
@@ -1,23 +1,102 @@
-Status: DRAFT
-ID: world_map
+Status: DRAFT  
+ID: world_map  
 
 # Карта мира
 
 ## Кратко
-Карта мира — это непрерывное пространство, в котором существуют и перемещаются все сущности мира.
+Карта мира — это системный слой, отвечающий за **пространственное состояние и пространственные переходы** сущностей в мире.  
+Карта исполняет движение, обнаружение и встречи в рамках **дискретной узловой структуры (графа)** и гарантирует завершение каждого пространственного цикла взаимодействий.
 
-## Расширенно
-Карта мира представляет собой абстракцию пространства мира.
-Все объекты, существующие на карте (отряды, точки интереса, акторы), имеют позицию в этом пространстве и могут взаимодействовать на основе расстояния и положения.
+Карта **не принимает стратегических решений**, не управляет временем и не генерирует сущности, но может принимать внешние сигналы и применять их к пространственному состоянию мира.
 
-Форма представления карты (графическая, сеточная, упрощённая) не является частью данного определения.
+---
 
-## Где используется
-- Передвижение отрядов
-- Определение расстояний и встреч
-- Размещение точек интереса и сущностей мира
+## Инварианты
 
-## НЕ означает
-- Набор узлов, между которыми осуществляется дискретный переход
-- Обязательное наличие дорог, регионов или биомов
-- Конкретный способ визуализации или навигации
+### 1. Источник истины о пространстве  
+Карта является **единственным источником истины** о пространственном состоянии сущностей:
+- где находится сущность,
+- движется ли она,
+- в каком пространственном статусе она находится.
+
+Ни одна внешняя система не изменяет позицию сущности напрямую — все изменения проходят через карту.
+
+---
+
+### 2. Дискретная структура мира  
+Карта представляет мир в виде **графа**:
+- узлы (точки пространства),
+- рёбра (допустимые переходы между узлами).
+
+Граф может иметь высокую плотность, создавая ощущение свободного передвижения при сохранении дискретной модели.
+
+---
+
+### 3. Позиция сущности  
+Сущность на карте может находиться:
+- **в узле**, или
+- **на ребре** между двумя узлами с параметром прогресса перемещения.
+
+Промежуточное положение является частью модели карты, а не визуальной абстракцией.
+
+---
+
+### 4. Гибридное время карты  
+Логика карты работает в **дискретных тиках**.  
+Решения о движении, обнаружении и встречах принимаются **на границах тиков**.
+
+Визуальная непрерывность может достигаться интерполяцией и **не является источником истины** для логики карты.
+
+---
+
+### 5. Замкнутый пространственный цикл  
+Карта гарантирует, что любое взаимодействие, начатое в рамках карты:
+- либо приводит к пространственному результату,
+- либо переводит сущность в устойчивый пространственный статус.
+
+Даже если часть процесса обрабатывается внешними системами, карта всегда фиксирует итоговое пространственное состояние.
+
+---
+
+### 6. Ограничение событий на рёбрах  
+Пространственные события на рёбрах допустимы **только** в случае, если все участники находятся **на одном и том же ребре**.
+
+Если сущности находятся на разных рёбрах, взаимодействие возможно только через узлы.
+
+---
+
+## Ответственность карты
+
+Карта отвечает за:
+- исполнение движения сущностей по графу (узел ↔ ребро ↔ узел),
+- вычисление обнаружения сущностей,
+- инициирование пространственных встреч,
+- применение и изменение **пространственных статусов** сущностей,
+- фиксацию начала и завершения пространственных взаимодействий.
+
+Карта исполняет действия **на основе намерений**, получаемых извне, и не формирует их самостоятельно.
+
+---
+
+## Взаимодействие с внешними системами
+
+- Карта может **принимать внешние сигналы** (например, о завершении взаимодействия, снятии блокировки, результате боя).
+- Карта применяет эти сигналы **исключительно к пространственному состоянию** сущностей.
+- Карта не интерпретирует причины сигналов и не управляет временной логикой их возникновения.
+
+---
+
+## Границы ответственности карты
+
+Карта **не отвечает** за:
+- принятие решений о целях и маршрутах (это ответственность контролёров),
+- генерацию новых сущностей,
+- механику боя, урон, способности и баланс,
+- глобальное расписание событий и временную занятость как причину.
+
+---
+
+## Примечания (TBD)
+
+- Типы узлов и рёбер, их свойства и правила генерации — TBD.
+- Перечень пространственных статусов сущностей и правила переходов — определяется в `Статус сущности на карте` (TBD).
